# tcc

./: .dockerignore  .env (Cópia)  .env.example  .gitignore  1settings.py  2.env  CLAUDE.md  Dockerfile  EVOLUX_MAS_IMPLEMENTATION_SUMMARY.md  METACOGNITION_IMPLEMENTATION.md  SYSTEM_STATUS.md  arrumar.sh  config.yaml  debug.py  demo_superintelligent_orchestrator.py  docker-compose.yml  enhanced_planner_suggestions.py  entrypoint.sh  especificacao.md  especificacao_inicial.md  evolux.py  evolux_mas_demo.py  evolux_standalone_demo.py  limpeza.sh  performance_test_results.json  pyproject.toml  quantum_plan_summary.md  quantum_prototype_demo.py  requirements.txt  resposta_openrouter.txt  run.py  settings.py  settings1.py  setup.py  test_async_performance.py  test_circuit_breaker_demo.py  test_evolux_basic.py  test_evolux_final.py  test_evolux_mas_system.py  test_evolux_with_mocks.py  (+5 more)
config/: default_config.yaml
core/: agent.py
evolux_engine/: __init__.py  context_manager.py  settings.py
evolux_engine.egg-info/: PKG-INFO  SOURCES.txt
evolux_engine/cache/: cognitive_cache.py
evolux_engine/config/: __init__.py  advanced_config.py
evolux_engine/core/: __init__.py  agent.py  agent_handoff.py  async_executor.py  async_orchestrator.py  cognitive_system.py  context_manager.py  critic.py  dependency_graph.py  evolux_a2a_integration.py  evolux_mas_integration.py  executor.py  executor_prompts.py  intelligent_a2a_system.py  intelligent_model_manager.py  iterative_refiner.py  mas_orchestrator.py  meta_learning_system.py  metacognitive_engine.py  orchestrator.py  planner.py  project_scaffolding.py  resource_aware_agent.py  resource_optimizer.py  simulation.py  specialized_agents.py  superintelligent_orchestrator.py  validator.py
evolux_engine/examples/: a2a_demo.py
evolux_engine/execution/: __init__.py  secure_executor.py
evolux_engine/llms/: __init__.py  async_llm_client.py  base_llm.py  llm_client.py  llm_factory.py  model_router.py  openai_llm.py  openrouter_llm.py
evolux_engine/models/: __init__.py  project_context.py
evolux_engine/prompts/: __init__.py  executor_prompts.py  planner_prompts.py  prompt_engine.py  specialized_prompts.py
evolux_engine/schemas/: contracts.py
evolux_engine/security/: __init__.py  security_gateway.py
evolux_engine/services/: __init__.py  advanced_context_manager.py  advanced_monitoring.py  aed_manager.py  async_file_service.py  backup_system.py  config_manager.py  context_manager.py  criteria_engine.py  enterprise_observability.py  (+5 more)
examples/: improved_execution_example.py
mcp-llm-server/: .env.example  .gitignore  COMO_EXECUTAR_AVANCADO.md  CONFIGURACAO_MCP.md  GUIA_COMPARTILHAMENTO.md  GUIA_COMPARTILHAMENTO_COMPLETO.md  INSTALL.md  INSTRUCOES_AMIGO.md  LICENSE  Makefile  README.md  STATUS.md  TESTE_FINAL.md  claude_mcp_client.py  client_mcp.py  pyproject.toml  quick_demo.py  requirements.txt  setup_check.py  setup_mcp.sh  shared_mcp_server.py  simple_mcp_server.py  start_shared_server.sh  test_config_only.py  test_import.py  test_mcp_full.py  test_openrouter.py  test_simple.py  test_simple_config.py
mcp-llm-server/examples/: basic_usage.py  claude_code_integration.md
mcp-llm-server/src/mcp_llm_server/: __init__.py  __main__.py  server.py
mcp-llm-server/src/mcp_llm_server/auth/: __init__.py  oauth.py  token_manager.py
mcp-llm-server/src/mcp_llm_server/clients/: __init__.py  base.py  claude.py  gemini.py  openai.py  openrouter.py
mcp-llm-server/src/mcp_llm_server/config/: __init__.py  settings.py  settings_old.py  simple_settings.py
mcp-llm-server/src/mcp_llm_server/tools/: __init__.py  chat.py  completion.py  model_info.py
mcp-llm-server/src/mcp_llm_server/utils/: __init__.py  exceptions.py  logging.py
proj_20250609_180533_f43c00/: context.json
proj_20250609_181036_f43c00/: context.json
proj_20250609_181848_f43c00/: context.json
proj_20250609_182024_f43c00/: context.json
proj_20250609_182052_f43c00/: context.json
proj_20250609_182212_f43c00/: context.json
project_workspaces/: .context_index.json  .gitkeep
src/: config.py  main.py  task_executor.py
tests/: test_circuit_breaker_integration.py
(+465 files in other folders)
